--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "predix-webapp-starter",
-  "version": "1.0.10",
+  "name": "balancer_frontend",
+  "version": "1.0.0",
   "private": true,
   "engines": {
     "node": ">=0.10.0"
   },
   "author": {
-    "name": "Predix Adoption",
-    "email": "predix.adoption@ge.com"
+    "name": "Team Balancer",
+    "email": "yusuf.daniju@andela.com"
   },
   "scripts": {
     "start": "node server/app.js",
