--- a/server/localConfig.json
+++ b/server/localConfig.json
@@ -3,7 +3,7 @@
     "note": "Out of the box, the predix-webapp-starter app uses mock data, so these values are not required.  Set these values for connecting to real Predix services.",
     "uaaURL": "https://f3f6dec7-6325-4e7e-984c-f0e0e1eca924.predix-uaa.run.aws-usw02-pr.ice.predix.io",
     "base64ClientCredential": "YmFsYW5jZXJfZnJvbnRlbmQ6YmFsYW5jZXJfZnJvbnRlbmQ=",
-    "loginBase64ClientCredential": "YmFsYW5jZXJfZnJvbnRlbmQ6YmFsYW5jZXJfZnJvbnRlbmQ=",
+    "loginBase64ClientCredential": "client:secret",
     "appURL": "http://localhost:5000",
     "timeseriesURL": "{Time Series URL from VCAPS}",
     "timeseriesZoneId": "{The Zone ID for the Timeseries Service Created}",
