--- a/bower.json
+++ b/bower.json
@@ -37,6 +37,7 @@
     "px-spacing-design": "^0.4.4",
     "px-buttons-design": "^1.1.7",
     "marked-element": "^1.3.1",
-    "px-dark-theme": "^1.0.10"
+    "px-dark-theme": "^1.0.10",
+    "byutv-jsonp": "^1.0.0"
   }
 }
